# get_ranking_py

./: .buildinfo  Makefile  README.md  genindex.html  index.html  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  main.doctree
.github/workflows/: main.yml
_modules/: index.html  main.html
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: conf.py
doctrees/: environment.pickle  index.doctree  main.doctree
get_ranking_py/: __main__.py  main.py
get_ranking_py/data/: game_score_log.csv
